[package]
name = "benchmark-ing"
version = "0.1.0"
authors = ["Jiawei Xu <jiawei.xu@hylink.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"

[dev-dependencies]
criterion = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
simd-json = "0.3.23"

[lib]
bench = false

[[bench]]
name = "fibonacci"
harness = false
bench = false

[[bench]]
name = "json"
harness = false
bench = false
