[package]
name = "benchmark-ing"
version = "0.1.0"
authors = ["Jiawei Xu <jiawei.xu@hylink.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
nix = "0.19.1"

[dev-dependencies]
criterion = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.61"
simd-json = "0.3.23"
tokio = {version = "1.0.1", features = ["full"]}
tokio-stream = "0.1"

[lib]
bench = false

[[bench]]
name = "fibonacci"
harness = false
bench = false

[[bench]]
name = "serde_json"
harness = false
bench = false

[[bench]]
name = "simd_json"
harness = false
bench = false

